--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,12 @@ dependencies:
   flutter_polyline_points: ^3.1.0
   http: ^1.6.0
   provider: ^6.1.5+1
+  flutter_spinkit: ^5.2.2
+  shared_preferences: ^2.5.4
+  font_awesome_flutter: ^10.12.0
+  icons_plus: ^5.0.0
+  country_picker: ^2.0.27
+  country_flags: ^4.1.2
 
 dev_dependencies:
   flutter_test:
