--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   icons_plus: ^5.0.0
   country_picker: ^2.0.27
   country_flags: ^4.1.2
+  linear_step_indicator: ^1.0.0+3
+  camera: ^0.11.3+1
+  flutter_map: ^8.2.2
 
 dev_dependencies:
   flutter_test:
